--- a/ReadMe
+++ b/ReadMe
@@ -11,3 +11,4 @@ Features:
 6. Accordion added on bottom of suggested videos list to load more items.
 7. Styling was done using bootstrap
 
+[[https://github.com/johnnam1121/portfolio/public/pictures/IGNPic2.png|alt=IGN pic]]
